--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+/* @override 
+	http://jon-mbp.local/~jon/jquery/css/main.css */
+
 /* ==========================================================================
    HTML5 Boilerplate styles - h5bp.com (generated via initializr.com)
    ========================================================================== */
@@ -391,38 +394,65 @@ body {
 	-webkit-font-smoothing: antialiased;
 	color: #333;
 	font: 15px/20px "Helvetica Neue", HelveticaNeue, Helvetica, Arial, sans-serif;
+	background-color: #e8e0e0;
 }  
+
+#container {
+	background: url(../images/bg-body-jquery.jpg) no-repeat center top #065691;
+	border-top: 1px solid rgba(255, 255, 255, 0.24);
+}
 
 
 .constrain {
 	max-width: 1200px;
 	margin: 0 auto;
 	padding: 0 20px;
-} 
-   
+}
+
+/* @group Global Nav */
+
 #global-nav {
-	background: url(../images/jq-global-nav.png) repeat-x 0 bottom;
+	background: url(../images/jq-global-nav.png) repeat-x 0 bottom #1b1b1b;
 }   
    
    
 #global-project-select {
 	background: url(../images/bg-top.jpg) repeat;
+	height: 150px;
 }   
    
-#global-project-select ul {
+#global-nav ul {
 	margin: 0;
 	padding: 0;
 }   
 
 #global-project-select li {
 	display: inline-block;
-	width: 18%;
+	width: 20%;
 	text-align: center;
-	margin-left: 2%;
+	padding-top: 20px;
+	height: 130px;
+	float: left;
 }
 
-#global-project-select li:first-child {
-	margin-left: 0;
+#global-project-select li a {
+	text-decoration: none;
+	display: block;
+	border-right: solid 1px rgba(0, 0, 0, 0.3);
+	border-left: solid 1px rgba(150, 150, 150, 0.08);
+	overflow: hidden;
+	padding: 0;
+	height: 110px;
+	position: relative;
+	
+}
+
+#global-project-select li:first-child a {
+	border-left: none;
+}
+
+#global-project-select li:last-child a {
+	border-right: none;
 }
 
 #global-project-select li img {
@@ -435,13 +465,139 @@ body {
 
 #global-project-select li a em {
 	clear: both;
-	font-size: 11px;
+	font-size: 13px;
 	color: #fff;
 	opacity: 0.25;
 	text-decoration: none;
 	text-align: center;
-	line-height: 11px;
+	line-height: 15px;
+	text-shadow: black 0 -1px 0;
+	-webkit-transition: all 0.4s;
+	-moz-transition: all 0.4s;
+	-ms-transition: all 0.4s;
+	-o-transition: all 0.4s;
+	transition: all 0.4s;
+	left: 20px;
+	right: 20px;
+	bottom: 10px;
+	position: absolute;
 }
+
+#global-project-select li a:hover em {
+	opacity: 0.75;
+}
+
+#global-nav nav {
+	height: 34px;
+}
+
+#global-nav nav ul {
+  text-align: left;
+  display: inline;
+  float: left;
+  margin: 1px 0 0;
+  list-style: none;
+  border-right: 1px solid rgba(255, 255, 255, 0.0976562);
+  border-left: 1px solid rgba(0, 0, 0, 0.347656);
+}
+
+#global-nav nav ul.links {
+	float: right;
+}
+
+#global-nav nav ul li {
+  font: bold 13px/17px sans-serif;
+  display: inline-block;
+  float: left;
+  position: relative;
+  padding: 8px 12px;
+  cursor: pointer;
+  -webkit-transition: all 0.2s;
+  -moz-transition: all 0.2s;
+  -ms-transition: all 0.2s;
+  -o-transition: all 0.2s;
+  transition: all 0.2s;
+  text-shadow: 0 0px 2px #000;
+  border-left: 1px solid rgba(255, 255, 255, 0.0976562);
+  border-right: 1px solid rgba(0, 0, 0, 0.347656);
+}
+
+#global-nav nav ul li:hover {
+  background: url(../images/bg-footer-noise.jpg) #000;
+  color: #fff;
+}
+
+#global-nav nav ul li i {
+	height: 1em;
+}
+
+#global-nav nav ul li a {
+	color: #e6e6e6;
+	font-weight: normal;
+	font-style: normal;
+	text-decoration: none;
+}
+
+#global-nav nav ul li ul {
+  padding: 0;
+  position: absolute;
+  top: 32px;
+  left: -2px;
+  width: 120px;
+  display: none;
+  opacity: 0;
+  visibility: hidden;
+  -webkit-transiton: opacity 0.2s;
+  -moz-transition: opacity 0.2s;
+  -ms-transition: opacity 0.2s;
+  -o-transition: opacity 0.2s;
+  -transition: opacity 0.2s;
+}
+
+#global-nav nav ul li:last-child ul {
+	left: -62px;
+}
+
+#global-nav nav ul li ul li { 
+  background: url(../images/bg-footer-noise.jpg) #000; 
+  display: block; 
+  color: #fff;
+  float: none;
+}
+
+#global-nav nav ul li ul li:hover { background: #000; }
+#global-nav nav ul li:hover ul {
+  display: block;
+  opacity: 1;
+  visibility: visible;
+}
+
+#global-nav nav ul.projects li.jquery,
+#global-nav nav ul.projects li.jquery-ui,
+#global-nav nav ul.projects li.jquery-mobile {
+	width: 42px;
+	padding-left: 0px;
+	padding-right: 0px;
+	text-indent: -1000px;
+	background: url(../images/jq-nav-icons.png) -3px 0;
+}
+
+#global-nav nav ul.projects li.jquery-ui {
+	background-position: -53px 0px;
+}
+
+#global-nav nav ul.projects li.jquery-mobile {
+	background-position: -103px 0px;
+}
+
+#global-nav nav ul.projects li.jquery.current {
+	background-position: 0 bottom;
+	width: 52px;
+	position: relative;
+	margin-top:2px;
+}
+
+/* @end */
    
    
 /* ==========================================================================
