--- a/css/normalize.css
+++ b/css/normalize.css
@@ -125,32 +125,32 @@ a:hover {
 
 h1 {
     font-size: 2em;
-    margin: 0.67em 0;
+	margin: 0 0 0.67em;
 }
 
 h2 {
     font-size: 1.5em;
-    margin: 0.83em 0;
+    margin: 0 0 0.83em;
 }
 
 h3 {
     font-size: 1.17em;
-    margin: 1em 0;
+    margin: 0 0 1em;
 }
 
 h4 {
     font-size: 1em;
-    margin: 1.33em 0;
+    margin: 0 0 1.33em;
 }
 
 h5 {
     font-size: 0.83em;
-    margin: 1.67em 0;
+    margin: 0 0 1.67em;
 }
 
 h6 {
     font-size: 0.75em;
-    margin: 2.33em 0;
+    margin: 0 0 2.33em;
 }
 
 /*
@@ -281,7 +281,7 @@ dl,
 menu,
 ol,
 ul {
-    margin: 1em 0;
+    margin: 0 0 1em;
 }
 
 dd {
@@ -295,7 +295,7 @@ dd {
 menu,
 ol,
 ul {
-    padding: 0 0 0 40px;
+    padding: 0;
 }
 
 /*
