--- a/css/main.css
+++ b/css/main.css
@@ -392,7 +392,8 @@ textarea {
    
 /* @group Customize Main Colors */
 
-a {
+a,
+#sidebar h3 {
 	color: #065a96;
 } 
 
@@ -446,6 +447,8 @@ body {
 	max-width: 1160px;
 	padding: 40px;
 	margin: 0 auto;
+	border-radius: 0px 0px 10px 10px;
+	position: relative;
 }
 
 .constrain {
@@ -462,6 +465,7 @@ body {
 
 #sidebar {
 		float: right;
+		margin-right: -40px;
 		position: relative;
 		border-left: 1px;
 		-moz-border-image: -moz-linear-gradient(#ffffff, #e7e7e7 15%, #e7e7e7 85%, #ffffff);
@@ -481,6 +485,7 @@ body {
 		width: 25%;
 		border: 0px;
 		border-left: 1px solid #cccccc;
+		padding-top: 40px;
 }
 
 
@@ -938,9 +943,9 @@ pre strong, pre b {
 	margin-left: 0;
 	margin-bottom: 0px;
 	padding: 20px 30px;
-	background: url(../images/concrete1.jpg) #f2f2f2;
 	position: relative;
 	text-shadow: 0 1px 0 #ffffff;
+	background-color: #f2f2f2;
 }
 
 #content ol,
@@ -1078,6 +1083,7 @@ pre strong, pre b {
 	color: #737272;
 	clear: both;
 	margin-top: -10px;
+	background-color: #f2f2f2;
 }
 
 #content .embed,
@@ -1128,6 +1134,7 @@ pre strong, pre b {
 
 /* @end */
 
+/* @group Buttons */
 
 a.button,
 #content a.button {
@@ -1166,6 +1173,481 @@ a.button.dark:hover,
 #content a.button.dark:hover {
 	background-color: #424141;
 }
+
+/* @end */
+
+/* @group Sidebar */
+
+#sidebar h3 {
+	font: normal normal 20px/18px Proxima-Nova, "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+	background-image: -webkit-gradient(linear, left bottom, right bottom, from(#efefef), to(#f3f3f3));
+	background-image: -moz-linear-gradient(360deg, #efefef 0%, #f3f3f3 100%);
+	margin-left: -35px;
+	margin-right: -20px;
+	padding: 12px 20px 12px 30px;
+	text-shadow: 0 1px 0 #ffffff;
+}
+
+#sidebar li {
+	padding-bottom: 8px;
+	padding-top: 8px;
+	padding-left: 20px;
+	line-height: 20px;
+	list-style-type: none;
+	background: url(../images/bullet.png) no-repeat 0 14px;
+	text-shadow: 0 1px 0 #ffffff;
+}
+
+#sidebar li a {
+	color: #4d4d4d;
+	text-decoration: none;
+}
+
+/* @end */
+
+.col, .col4-1, .col4-2, .col4-3, .col3-1, .col3-2, .col2-1 {
+	float: left;
+	padding-right: 3%;
+}
+
+.col4-1 { width: 21% }
+.col4-2 { width: 47% }
+.col4-3 { width: 72% }
+
+.col7-1 { width: 15.2% }
+.col7-2 { width: 27%   }
+.col7-3 { width: 40.9% }
+
+.col3-1 { width: 30% }
+.col3-2 { width: 63% }
+
+.col2-1 { width: 47% }
+
+.col.first, .col4-1.first, .col4-2.first, .col4-3.first, .col3-1.first, .col3-2.first, .col2-1.first {
+	margin-left: 0;
+	clear: left;
+}
+
+
+
+footer {
+	background: url(../images/bg-footer-noise.jpg) repeat;
+	border-top: 1px solid rgba(255, 255, 255, 0.24);
+	margin-top: -20px;
+}
+
+footer .cdn {
+	border-radius: 4px;
+	background: #000 url(../i/cdn-download.png) center center repeat-x;
+	width: 96%;
+	margin-left: 2%;
+	height: 30px;
+	line-height: 30px;
+	position: relative;
+	overflow: hidden;
+	white-space: nowrap;
+	-webkit-box-shadow: rgba(255,255,255,0.15) 0 1px 0;
+	box-shadow: rgba(255,255,255,0.15) 0 1px 0;
+}
+
+footer .cdn ~ .cdn { margin-top: 5px; }
+
+footer .cdn ~ .cdn strong { text-align: right; }
+
+.no-boxshadow { border-bottom: solid 1px #333; }
+
+footer .cdn strong {
+	text-align: center;
+	height: 26px;
+	text-align: left;
+	padding: 0 6px 0 6px;
+	line-height: 28px;
+	display: inline-block;
+	margin: 2px 0 0 2px;
+	position: relative;
+	border-radius: 3px 0 0 3px;
+	background: #777;
+	color: #fff;
+	text-shadow: #000 0 -1px 0;
+	font-weight: normal;
+	background-color: #7a7a7a;
+	background-image: -moz-linear-gradient(top, #7a7a7a, #5e5e5e); /* FF3.6 */
+	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #7a7a7a),color-stop(1, #5e5e5e)); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient(#7a7a7a, #5e5e5e); /* Chrome 10+, Saf6 */
+	background-image: linear-gradient(top, #7a7a7a, #5e5e5e);
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#7a7a7a', EndColorStr='#5e5e5e'); /* IE6–IE9 */
+}
+
+footer .cdn strong:after {
+	content: "";
+	display: block;
+	position: absolute;
+	left: 0;
+	right: 0;
+	top: 0;
+	bottom: 0;
+	border: solid 1px rgba(255,255,255,0.2);
+	border-radius: 3px 0 0 3px;
+}
+
+footer .cdn strong em {
+	font-style: normal;
+	color: #ccc;
+	font-family: Consolas, Monaco, monospace;
+	display: inline-block;
+	width: 20px;
+	padding-left: 5px;
+	padding-right: 4px;
+	text-align: right;
+}
+
+footer .cdn input {
+	display: inline-block;
+	width: 100%;
+	background: inherit;
+	border: 0;
+	font-family: Consolas, monospace;
+	padding-left: 5px;
+	white-space: nowrap;
+	color: #ccc;
+	font-size: 12px;
+}
+
+footer .cdn input:focus { outline: none; }
+
+footer .download {
+	text-align: center;
+	color: #fff;
+	padding: 10px 2% 15px 2%;
+	line-height: 140%;
+}
+
+footer .download strong { margin-right: 10px; }
+
+footer .download > span { white-space: nowrap; }
+
+footer .download a { margin: 0 10px; }
+
+footer .download a em {
+	font-style: normal;
+	color: #aaa;
+}
+
+footer .download a:hover { border-bottom: solid 1px #888; }
+
+footer .footer-icon-links {
+	padding: 15px 0;
+	margin: 0 2%;
+	border-top: solid 1px #333;
+	-webkit-box-shadow: #000 0 -1px 0;
+	box-shadow: #000 0 -1px 0;
+}
+
+footer .footer-icon-links li {
+	width: 33%;
+	margin-left: 2%;
+	float: left;
+}
+
+footer .footer-icon-links li.icon-bugs { width: 27%; }
+
+footer .footer-icon-links li a {
+	display: block;
+	padding-left: 40px;
+	line-height: auto;
+	font-size: 18px;
+	float: left;
+	position: relative;
+}
+
+footer .footer-icon-links li.footer-icon a,
+footer .footer-icon-links li.footer-icon a span { background: url(../i/footer-icons-large.png) no-repeat; }
+
+footer .footer-icon-links li.footer-icon a span {
+	content: "";
+	display: block;
+	opacity: 0;
+	width: 34px;
+	height: 32px;
+	position: absolute;
+	left: 0;
+	top: 0;
+}
+
+footer .footer-icon-links li.icon-github a { background-position: 0 0;}
+footer .footer-icon-links li.icon-forum  a { background-position: 0 -123px;}
+footer .footer-icon-links li.icon-bugs   a { background-position: 0 -249px;}
+
+footer .footer-icon-links li.icon-github a span { background-position: -251px 0;}
+footer .footer-icon-links li.icon-forum  a span { background-position: -251px -123px;}
+footer .footer-icon-links li.icon-bugs   a span { background-position: -251px -249px;}
+
+.no-js footer .footer-icon-links li.footer-icon a:hover span { opacity: 1.0; }
+
+footer .footer-icon-links li small {
+	display: block;
+	font-size: 14px;
+	color: #777;
+	line-height: 120%;
+}
+
+footer .footer-icon-links li:first-child { margin-left: 0%; }
+
+.multiplebgs.cssgradients footer {
+	background-image: -moz-linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0.0)), url(../images/bg-footer-noise.jpg); /* FF3.6 */
+	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, rgba(0,0,0,0.3)),color-stop(1, rgba(0,0,0,0.0))), url(../images/bg-footer-noise.jpg); /* Saf4+, Chrome */
+	background-image: -webkit-linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.0)), url(../images/bg-footer-noise.jpg); /* Chrome 10+, Saf6 */
+	background-repeat: repeat-x, repeat;
+	background-size: 100px 15px, 140px 140px;
+}
+
+.no-multiplebgs footer, .no-cssgradients footer {
+	background-image: url(../i/bg-footer-noise.jpg);
+	background-repeat: repeat;
+}
+
+footer h3 {
+	color: #777;
+	letter-spacing: normal;
+	text-transform: uppercase;
+	text-shadow: #000 0 1px 0;
+	border: solid 1px #000;
+	text-rendering: optimizeLegibility;
+	border-bottom: none;
+	border-radius: 4px 4px 0 0;
+	position: relative;
+	text-align: center;
+	height: 10px;
+	margin-top: 20px;
+	font: normal 14px Proxima-Nova, "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+}
+
+footer h3 span {
+	display: inline-block;
+	padding: 3px 10px;
+	position: relative;
+	top: -0.8em;
+	background: url(../images/bg-footer-noise.jpg) repeat #212121;
+	z-index: 1;
+}
+
+footer h3:after {
+	content: "";
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	border: solid 1px #333;
+	border-bottom: none;
+	border-radius: 4px 4px 0 0;
+	
+}
+
+.footer-site-links {
+	float: right;
+	padding: 10px 0 0 0;
+	width: 60%;
+	text-align: right;
+}
+
+footer p.copyright {
+	margin: 10px 0 0 0;
+	float: left;
+	width: 40%;
+	font-size: 11px;
+	line-height: 130%;
+	color: #777;
+}
+
+footer p.copyright a { color: #aaa; }
+
+footer p.copyright a:hover { color: #fff; }
+
+footer p.copyright > br { display: none; }
+
+footer p.copyright span.sponsor-line {
+	display: block;
+	font-size: 10px;
+	margin: 1px 0 0 0;
+}
+
+footer li.icon {
+	position: relative;
+	background: none;
+	width: auto;
+	height: auto;
+	line-height: 20px;
+	margin: 0 0 10px 20px;
+	font-size: 13px;
+}
+
+footer li.icon a {
+	padding-left: 22px;
+	position: relative;
+	z-index: 10;
+	color: #aaa;
+}
+
+footer li.icon a:hover { color: #FFF; }
+
+.footer-site-links li { display: inline-block; }
+
+footer li.icon:before {
+	content: "";
+	display: block;
+	height: 24px;
+	width: 24px;
+	position: absolute;
+	left: 0;
+	top: -2px;
+	background: url(../i/footer-icons.png) no-repeat;
+	z-index: 5;
+}
+
+footer li.icon-learning-center:before       { background-position: 1px 2px;}
+footer li.icon-forum:before                 { background-position: -101px 0;}
+footer li.icon-api:before                   { background-position: -33px 0;}
+footer li.icon-twitter:before               { background-position: -135px 0;}
+footer li.icon-irc:before                   { background-position: -67px 0;}
+
+footer li.icon-learning-center:hover:before { background-position: 1px -32px;}
+footer li.icon-forum:hover:before           { background-position: -101px -34px;}
+footer li.icon-api:hover:before             { background-position: -33px -34px;}
+footer li.icon-twitter:hover:before         { background-position: -135px -34px;}
+footer li.icon-irc:hover:before             { background-position: -67px -34px;}
+
+footer .col {
+	margin-left: 2.5%;
+	padding: 30px 0 20px 0;
+	height: 100%;
+}
+
+footer .col:first-child { margin-left: 0 }
+
+footer ul {	}
+
+footer ul li {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	line-height: 30px;
+}
+
+.jquery footer a, .jquery-ui footer a, .jquery-mobile footer a, footer .bottom {
+	color: #fff;
+	text-decoration: none;
+}
+
+footer .bottom { margin: 0 10% 0 0; }
+
+footer #legal {
+	clear: left;
+	display: block;
+	border-top: solid 1px #333;
+	-webkit-box-shadow: #000 0 -1px 0;
+	box-shadow: #000 0 -1px 0;
+}
+
+footer #legal .constrain {
+	background: none;
+	height: auto;
+}
+
+footer .presentations {	}
+
+footer .presentations li {
+	float: left;
+	width: 45%;
+	min-width: 142px;
+	margin-left: 3.5%;
+	line-height: 130%;
+	font-size: 11px;
+}
+
+footer .presentations li a > span,
+footer .books         li a > span {
+	display: block;
+	border-radius: 5px;
+	border: solid 1px #000;
+	position: relative;
+	width: 142px;
+	height: 92px;
+	margin-bottom: 5px;
+	overflow: hidden;
+	background-clip: padding-box;
+}
+
+footer .presentations li a:hover > span,
+footer .books         li a:hover > span {
+	border-color: white;
+	-webkit-transition: none;
+}
+
+footer .presentations li a > span:after,
+footer .books         li a > span:after {
+	content: "";
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: -webkit-gradient(linear, 100% 0%, 55% 100%, from(rgba(255,255,255,0.02)), color-stop(0.5, rgba(255,255,255,0.1)), color-stop(0.505, rgba(255,255,255,0)), to(rgba(255,255,255,0)));
+	-webkit-background-clip: padding-box;
+	border: solid 1px rgba(255,255,255,0.2);
+	border-radius: 4px;
+}
+
+footer .presentations li a:hover > span:after,
+footer .books         li a:hover > span:after { background: -webkit-gradient(linear, 100% 0%, 55% 100%, from(rgba(255,255,255,0.02)), color-stop(0.5, rgba(255,255,255,0.3)), color-stop(0.505, rgba(255,255,255,0)), to(rgba(255,255,255,0))); }
+
+footer .presentations li a > span img {
+	max-width: 100%;
+	height: auto;
+}
+
+footer .presentations li a > br,
+footer .books         li a > br { display: none; }
+
+footer .presentations li a cite,
+footer .books         li a cite {
+	font-style: normal;
+	display: block;
+	margin-top: 3px;
+	font-size: 9px;
+	color: #aaa;
+}
+
+footer .presentations li a cite,
+footer .presentations li a strong,
+footer .books         li a cite,
+footer .books         li a strong {
+	line-height: 130%;
+	display: block;
+	font-weight: normal;
+}
+
+footer .books li {
+	float: left;
+	width: 30%;
+	min-width: 95px;
+	margin-left: 2.8%;
+	margin-bottom: 15px;
+	line-height: 130%;
+	font-size: 11px;
+}
+
+footer .books li:first-child { margin-left: 2%; }
+
+footer .books li a > span {
+	width: 90px;
+	height: 114px;
+}
+
+footer .books li a > span.top    { background-position: center top;}
+footer .books li a > span.bottom { background-position: center bottom;}
+footer .books li a > span        { background-position: center center;}
 
 /* ==========================================================================
    Media Queries
