Finalizing first draft of Secondary Page

--- a/css/main.css
+++ b/css/main.css
@@ -390,32 +390,6 @@ textarea {
    
    /* @end */
    
-/* @group Customize Main Colors */
-
-a,
-#sidebar h3 {
-	color: #065a96;
-} 
-
-#content code a {
-	background-color: rgba(6, 89, 150, 0.19);
-}
-
-#content h1 {
-	color: #e18d3b;
-}
-
-a.button,
-#content a.button {
-	background-color: #d18f4f;
-}
-
-a.button:hover,
-#content a.button:hover {
-	background-color: #cc8540;
-}
-
-/* @end */
    
 body {
 	-webkit-font-smoothing: antialiased;
@@ -425,7 +399,6 @@ body {
 
 #container {
 	background: url(../images/bg-body-jquery.jpg) no-repeat center top #065691;
-	border-top: 1px solid rgba(255, 255, 255, 0.24);
 	margin: 0 auto;
 	padding: 0 20px;
 	
@@ -459,7 +432,7 @@ body {
 
 #content {
 	float: left;
-	width: 60%;
+	width: 68%;
 }
 
 
@@ -561,8 +534,8 @@ body {
 	margin-left: auto;
 	margin-right: auto;
 	display: block;
-	width: 84%;
-	margin: 10px 5%;
+	margin: 10px 10%;
+	width: 80%;
 }
 
 #global-project-select li a em {
@@ -657,6 +630,7 @@ body {
   -moz-box-shadow: 0 4px 5px rgba(0, 0, 0, 0.4);
   -webkit-box-shadow: 0 43px 5px rgba(0, 0, 0, 0.4);
   box-shadow: 0 4px 5px rgba(0, 0, 0, 0.4);
+  z-index: 400;
 }
 
 #global-nav nav ul li:last-child ul {
@@ -759,13 +733,14 @@ body {
 h2.logo {
 	float: left;
 	margin: 0;
+	width: 243px;
 }
 
 #body-jquery h2.logo a {
 	float: left;
 	display: block;
-	width: 280px;
-	height: 67px;
+	width: 243px;
+	height: 66px;
 	background: url(../images/logo-jquery.png) no-repeat;
 	overflow: hidden;
 	text-indent: -1000px;
@@ -824,7 +799,7 @@ nav#main .searchform {
 
 nav#main .searchform {
 	float: right;
-	width: 20%;
+	width: 28%;
 	margin-top: 12px;
 	-webkit-border-radius: 20px;
 	-moz-border-radius: 20px;
@@ -853,6 +828,7 @@ nav#main .searchform i {
 	border-left: 1px solid rgba(7, 7, 7, 0.65);
 	padding-left: 7px;
 	opacity: 0.33;
+	color: #fff;
 }
 
 /* @end */
@@ -861,7 +837,6 @@ nav#main .searchform i {
 
 #content a {
 	text-decoration: underline;  
-	transition: color 0.25s ease-in-out;
 }
 
 #content a:hover {
@@ -1132,6 +1107,23 @@ pre strong, pre b {
 	margin-bottom: 10px;
 }
 
+#banner-secondary {
+	background-image: url(../images/dark-grey-tile.png);
+	margin-top: -40px;
+	margin-left: -40px;
+	margin-right: -40px;
+	padding: 20px 40px;
+	margin-bottom: 30px;
+}
+
+#banner-secondary h2 {
+	font: bold 45px/50px Proxima-Nova, "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+	letter-spacing: -1px;
+	margin-bottom: 0;
+	color: #fff;
+	text-shadow: 0 0 4px rgba(0, 0, 0, 0.85);
+}
+
 /* @end */
 
 /* @group Buttons */
@@ -1157,6 +1149,11 @@ a.button,
 	text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.35);
 	padding: 5px 12px;
 	font: bold 16px/16px "proxima-nova", "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
+	-webkit-transition: all 0.2s;
+	-moz-transition: all 0.2s;
+	-ms-transition: all 0.2s;
+	-o-transition: all 0.2s;
+	transition: all 0.2s;
 }
 
 a.button.large,
@@ -1205,6 +1202,8 @@ a.button.dark:hover,
 
 /* @end */
 
+/* @group Footer Grid */
+
 .col, .col4-1, .col4-2, .col4-3, .col3-1, .col3-2, .col2-1 {
 	float: left;
 	padding-right: 3%;
@@ -1228,12 +1227,19 @@ a.button.dark:hover,
 	clear: left;
 }
 
+/* @end */
 
+/* @group Footer */
 
 footer {
 	background: url(../images/bg-footer-noise.jpg) repeat;
-	border-top: 1px solid rgba(255, 255, 255, 0.24);
 	margin-top: -20px;
+}
+
+footer a,
+footer strong {
+	color: #fff;
+	text-decoration: none;
 }
 
 footer .cdn {
@@ -1269,13 +1275,14 @@ footer .cdn strong {
 	background: #777;
 	color: #fff;
 	text-shadow: #000 0 -1px 0;
-	font-weight: normal;
+	font-weight: bold;
 	background-color: #7a7a7a;
 	background-image: -moz-linear-gradient(top, #7a7a7a, #5e5e5e); /* FF3.6 */
 	background-image: -webkit-gradient(linear,left top,left bottom,color-stop(0, #7a7a7a),color-stop(1, #5e5e5e)); /* Saf4+, Chrome */
 	background-image: -webkit-linear-gradient(#7a7a7a, #5e5e5e); /* Chrome 10+, Saf6 */
 	background-image: linear-gradient(top, #7a7a7a, #5e5e5e);
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorStr='#7a7a7a', EndColorStr='#5e5e5e'); /* IE6–IE9 */
+	font-family: Proxima-Nova, "Helvetica Neue", Arial, Helvetica, Geneva, sans-serif;
 }
 
 footer .cdn strong:after {
@@ -1344,45 +1351,31 @@ footer .footer-icon-links {
 }
 
 footer .footer-icon-links li {
-	width: 33%;
-	margin-left: 2%;
+	width: 22%;
+	margin-left: 11%;
 	float: left;
 }
 
-footer .footer-icon-links li.icon-bugs { width: 27%; }
 
 footer .footer-icon-links li a {
 	display: block;
-	padding-left: 40px;
 	line-height: auto;
 	font-size: 18px;
 	float: left;
 	position: relative;
+	width: auto;
+	text-align: left;
+	padding-left: 10px;
 }
 
-footer .footer-icon-links li.footer-icon a,
-footer .footer-icon-links li.footer-icon a span { background: url(../i/footer-icons-large.png) no-repeat; }
-
-footer .footer-icon-links li.footer-icon a span {
-	content: "";
-	display: block;
-	opacity: 0;
-	width: 34px;
-	height: 32px;
+footer .footer-icon-links li a:before {
 	position: absolute;
-	left: 0;
-	top: 0;
+	left: -35px;
+	top: 10px;
+	font-size: 2em;
+	color: #4d4d4d;
+	text-shadow: 0 -1px 0 #000000;
 }
-
-footer .footer-icon-links li.icon-github a { background-position: 0 0;}
-footer .footer-icon-links li.icon-forum  a { background-position: 0 -123px;}
-footer .footer-icon-links li.icon-bugs   a { background-position: 0 -249px;}
-
-footer .footer-icon-links li.icon-github a span { background-position: -251px 0;}
-footer .footer-icon-links li.icon-forum  a span { background-position: -251px -123px;}
-footer .footer-icon-links li.icon-bugs   a span { background-position: -251px -249px;}
-
-.no-js footer .footer-icon-links li.footer-icon a:hover span { opacity: 1.0; }
 
 footer .footer-icon-links li small {
 	display: block;
@@ -1391,7 +1384,10 @@ footer .footer-icon-links li small {
 	line-height: 120%;
 }
 
-footer .footer-icon-links li:first-child { margin-left: 0%; }
+footer .footer-icon-links li:hover a:before {
+	color: #d1d1d1;
+}
+
 
 .multiplebgs.cssgradients footer {
 	background-image: -moz-linear-gradient(top, rgba(0,0,0,0.3), rgba(0,0,0,0.0)), url(../images/bg-footer-noise.jpg); /* FF3.6 */
@@ -1402,7 +1398,7 @@ footer .footer-icon-links li:first-child { margin-left: 0%; }
 }
 
 .no-multiplebgs footer, .no-cssgradients footer {
-	background-image: url(../i/bg-footer-noise.jpg);
+	background-image: url(../images/bg-footer-noise.jpg);
 	background-repeat: repeat;
 }
 
@@ -1472,50 +1468,40 @@ footer p.copyright span.sponsor-line {
 	margin: 1px 0 0 0;
 }
 
-footer li.icon {
+footer .footer-site-links li {
 	position: relative;
 	background: none;
 	width: auto;
 	height: auto;
 	line-height: 20px;
-	margin: 0 0 10px 20px;
+	margin: 0 0 10px 30px;
 	font-size: 13px;
 }
 
-footer li.icon a {
-	padding-left: 22px;
+footer .footer-site-links li a {
 	position: relative;
-	z-index: 10;
 	color: #aaa;
+	display: block;
+	padding-left: 25px;
+	width: auto;
 }
 
-footer li.icon a:hover { color: #FFF; }
+footer .footer-site-links li a:before {
+	position: absolute;
+	font-size: 1.5em;
+	color: #4d4d4d;
+	text-shadow: 0 -1px 0 #000000;
+	left: 2px;
+}
+
+footer .footer-site-links li:hover a,
+footer .footer-site-links li:hover a:before {
+	color: #e6e6e6;
+}
+
 
 .footer-site-links li { display: inline-block; }
 
-footer li.icon:before {
-	content: "";
-	display: block;
-	height: 24px;
-	width: 24px;
-	position: absolute;
-	left: 0;
-	top: -2px;
-	background: url(../i/footer-icons.png) no-repeat;
-	z-index: 5;
-}
-
-footer li.icon-learning-center:before       { background-position: 1px 2px;}
-footer li.icon-forum:before                 { background-position: -101px 0;}
-footer li.icon-api:before                   { background-position: -33px 0;}
-footer li.icon-twitter:before               { background-position: -135px 0;}
-footer li.icon-irc:before                   { background-position: -67px 0;}
-
-footer li.icon-learning-center:hover:before { background-position: 1px -32px;}
-footer li.icon-forum:hover:before           { background-position: -101px -34px;}
-footer li.icon-api:hover:before             { background-position: -33px -34px;}
-footer li.icon-twitter:hover:before         { background-position: -135px -34px;}
-footer li.icon-irc:hover:before             { background-position: -67px -34px;}
 
 footer .col {
 	margin-left: 2.5%;
@@ -1534,10 +1520,6 @@ footer ul li {
 	line-height: 30px;
 }
 
-.jquery footer a, .jquery-ui footer a, .jquery-mobile footer a, footer .bottom {
-	color: #fff;
-	text-decoration: none;
-}
 
 footer .bottom { margin: 0 10% 0 0; }
 
@@ -1581,7 +1563,6 @@ footer .books         li a > span {
 footer .presentations li a:hover > span,
 footer .books         li a:hover > span {
 	border-color: white;
-	-webkit-transition: none;
 }
 
 footer .presentations li a > span:after,
@@ -1649,14 +1630,251 @@ footer .books li a > span.top    { background-position: center top;}
 footer .books li a > span.bottom { background-position: center bottom;}
 footer .books li a > span        { background-position: center center;}
 
+footer li img {
+	border-radius: 4px;
+}
+
+/* @end */
+
 /* ==========================================================================
    Media Queries
    ========================================================================== */
 
 
 
-@media only screen and (min-width: 35em) {
+@media only screen and (max-width: 1100px) {
+	
+}
 
+@media only screen and (max-width: 940px) {
+	
+}
+
+@media only screen and (max-width: 860px) {
+	
+}
+
+@media only screen and (max-width: 768px) {
+	#global-nav ul.projects li.toggle-projects {
+		display: none;
+	}
+	
+	#sidebar {
+		width: auto;
+		float: none;
+		clear: both;
+		margin: 0;
+		border-top: 1px solid #e7e7e7;
+		border-left: none;
+		-moz-border-image: none;
+		-webkit-border-image: none;
+		-webkit-border-image: none;
+		-o-border-image: none;
+		border-image: none;
+		-webkit-box-shadow: none;
+		box-shadow: none;
+		background-image: none;
+		background-image: none;
+		background-image: none;
+		background-image: none;
+		background-image: none;
+		background-image: none;
+	}
+	
+	#content,
+	.col7-3.col,
+	footer #legal p.copyright,
+	footer #legal ul.footer-site-links {
+		width: 100%;
+		float: none;
+		clear: both;
+	}
+	
+	footer #legal ul.footer-site-links {
+		display: inline;
+		text-align: center !important;
+		text-transform: none;
+		float: left;
+		width: 100%;
+	}
+	
+	footer #legal ul.footer-site-links li:first-child {
+		margin-left: 0;
+	}
+	
+	footer #legal p.copyright {
+		text-align: center;
+		margin-bottom: 10px;
+	}
+	
+	.col7-2.col {
+		margin: 0;
+		width: 100%;
+		padding-top: 10px;
+		padding-bottom: 10px;
+	}
+	
+}
+
+@media only screen and (max-width: 600px) {
+	#global-nav ul.projects {
+		display: none;
+	}
+	
+	#global-nav nav ul.links {
+		float: left;
+	}
+	
+	#global-nav nav ul.links li {
+		font-size: 12px;
+	}
+	
+	#logo-events {
+		padding-top: 20px;
+		padding-bottom: 10px;
+	}
+	
+	#logo-events aside {
+		display: none;
+	}
+	
+	#logo-events h2.logo {
+		float: none;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	
+	nav#main {
+		background-color: rgba(0, 0, 0, 0.0);
+		border-radius: 10px 10px 0 0;
+		border-right: none;
+		border-left: none;
+		border-top: none;
+		-webkit-box-shadow: none;
+		box-shadow: none;
+	}
+	
+	nav#main .searchform {
+		display: none;
+	}
+	
+	nav#main ul {
+		width: 100%;
+		text-align: center !important;
+		float: left;
+		margin-bottom: 10px;
+	}
+	
+	nav#main ul li,
+	nav#main ul li a {
+		position: relative;
+		display: inline;
+		text-align: center !important;
+		text-transform: none;
+		float: none;
+	}
+	
+	nav#main li a:hover,
+	nav#main li.current a {
+		background: none;
+		-webkit-box-shadow: none;
+		box-shadow: none;
+		border-radius: 4px;
+		border: 1px solid rgba(0,0,0,0.0);
+	}
+	
+	#content-wrapper {
+		-webkit-border-top-left-radius: 10px;
+		-webkit-border-top-right-radius: 10px;
+		-moz-border-radius-topleft: 10px;
+		-moz-border-radius-topright: 10px;
+		border-top-left-radius: 10px;
+		border-top-right-radius: 10px;
+	}
+	
+	#banner-secondary {
+		-webkit-border-top-left-radius: 9px;
+		-webkit-border-top-right-radius: 9px;
+		-moz-border-radius-topleft: 9px;
+		-moz-border-radius-topright: 9px;
+		border-top-left-radius: 9px;
+		border-top-right-radius: 9px;
+	}
+	
+	#banner-secondary h2 {
+		font-size: 35px;
+		line-height: 35px;
+	}
+	
+	#content h1 {
+		font-size: 26px;
+		line-height: 26px;
+	}
+	
+	footer .presentations li,
+	footer .books li {
+		clear: both;
+		margin-bottom: 10px;
+		float: none;
+		margin-left: auto !important;
+		margin-right: auto;
+		text-align: center;
+	}
+	
+	footer .presentations li span,
+	footer .books li span {
+		display: block;
+		margin-left: auto;
+		margin-right: auto;
+	}
+	
+}
+
+@media only screen and (max-width: 480px) {
+	
+	.constrain,
+	#container {
+		padding-left: 10px;
+		padding-right: 10px;
+	}
+	
+	#content-wrapper {
+		padding-left: 25px;
+		padding-right: 25px;
+	}
+	
+	#banner-secondary,
+	#content pre {
+		margin-left: -25px;
+		margin-right: -25px;
+	}
+	
+	#content img.left,
+	#content figure.left,
+	#content img.right,
+	#content figure.right {
+		display: block;
+		width: 100%;
+		max-width: 100%;
+		margin-left: 0;
+		margin-right: 0;
+	}
+	
+	footer .footer-icon-links li a:before {
+		display: none;
+	}
+	
+	footer .footer-icon-links li:first-child {
+		margin-left: 0;
+	}
+}
+
+
+@media only screen and (-webkit-device-pixel-ratio: 2){
+	#body-jquery h2.logo a {
+		background: url(../images/logo-jquery@2x.png) no-repeat;
+		background-size: 243px 66px;
+	}
 }
 
 @media only screen and (-webkit-min-device-pixel-ratio: 1.5),
