--- a/css-foundation/jquery-foundation-main.css
+++ b/css-foundation/jquery-foundation-main.css
@@ -1,11 +1,11 @@
 /* @override 
-	http://jon-mbp.local/~jon/jquery/css/jquery-foundation-main.css */
+	http://jon-mbp.local/~jon/jquery/css-foundation/jquery-foundation-main.css */
 
 /*Custom Colors*/
 
 a,
 #sidebar h3 {
-	color: #065a96;
+	color: #0098bf;
 } 
 
 #content code a {
@@ -13,23 +13,23 @@ a,
 }
 
 #content h1 {
-	color: #e18d3b;
+	color: #b71551;
 }
 
 a.button,
 #content a.button {
-	background-color: #d18f4f;
+	background-color: #b71551;
 }
 
 a.button:hover,
 #content a.button:hover {
-	background-color: #cc8540;
+	background-color: #7c0d36;
 }
 
 
 #container,
 footer {
-	border-top: 1px solid rgb(34, 139, 193);
+	border-top: 1px solid rgb(96, 194, 195);
 }
 
 
