--- a/css/base.css
+++ b/css/base.css
@@ -1300,6 +1300,11 @@ footer {
 	margin-top: -20px;
 }
 
+footer.simple {
+	padding-top: 45px;
+	padding-bottom: 10px;
+}
+
 footer a,
 footer strong {
 	color: #fff;
