--- a/css/base.css
+++ b/css/base.css
@@ -463,7 +463,7 @@ body {
 		-webkit-border-image: -webkit-linear-gradient(#ffffff, #e7e7e7 15%, #e7e7e7 85%, #ffffff);
 		-o-border-image: -o-linear-gradient(#ffffff, #e7e7e7 15%, #e7e7e7 85%, #ffffff);
 		border-image: linear-gradient(#ffffff, #e7e7e7 15%, #e7e7e7 85%, #ffffff);
-		padding: 0.5em 20px 0.5em 35px; /*0.5 * 16px = 8px*/
+		padding: 3em 20px 3em 35px; /*0.5 * 16px = 8px*/
 		-webkit-box-shadow: inset 15px 0 5px -16px #e7e7e7;
 		box-shadow: inset 15px 0 5px -16px #e7e7e7;
 		background-image: -webkit-gradient(radial, 0% 50%, 0, 0% 50%, 80, color-stop(0%, #f2f2f2), color-stop(80%, #ffffff));
@@ -475,8 +475,7 @@ body {
 		width: 29%;
 		border: 0px;
 		border-left: 1px solid #cccccc;
-		padding-top: 40px;
-}
+	}
 
 
 .sidebar-left #sidebar,
@@ -1262,6 +1261,19 @@ a.button.dark:hover,
 #sidebar li a {
 	color: #4d4d4d;
 	text-decoration: none;
+}
+
+#sidebar nav#secondary li {
+	background-image: none;
+	padding-left: 0;
+}
+
+#sidebar nav#secondary li.current {
+	background-color: #e2e2e2;
+	margin-left: -35px;
+	margin-right: -20px;
+	padding-left: 35px;
+	font-weight: bold;
 }
 
 /* @end */
